--- a/usr/lib/enigma2/python/Plugins/Extensions/tvspro/locale/it/LC_MESSAGES/tvspro.po
+++ b/usr/lib/enigma2/python/Plugins/Extensions/tvspro/locale/it/LC_MESSAGES/tvspro.po
@@ -9,7 +9,7 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=iso-8859-1\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 1.8.7\n"
+"X-Generator: Poedit 3.4.4\n"
 "X-Poedit-Basepath: ../../..\n"
 "X-Poedit-SearchPath-0: plugin.py\n"
 
@@ -142,7 +142,7 @@ msgstr "non e' fonte di alcun stream/flusso.\n"
 
 #: plugin.py:800
 msgid "Absolutely PROHIBITED to use this lists without authorization\n"
-msgstr "ssolutamente VIETATO utilizzare queste liste senza autorizzazione.\n"
+msgstr "Assolutamente VIETATO utilizzare queste liste senza autorizzazione.\n"
 
 #: plugin.py:827
 msgid "SETUP PLUGIN"
@@ -202,7 +202,7 @@ msgstr "Configura risoluzione Skin, è necessario riavviare Enigma"
 
 #: plugin.py:943
 msgid "Choose Directory:"
-msgstr "Scegli cartella"
+msgstr "Scegli cartella:"
 
 #: plugin.py:944
 msgid "Choose Directory"
@@ -210,7 +210,7 @@ msgstr "Scegli percorso"
 
 #: plugin.py:967
 msgid "Settings saved correctly!"
-msgstr "Settings salvati correttamente"
+msgstr "Settings salvati correttamente!"
 
 #: plugin.py:977
 msgid "Really close without saving settings?"
